# REPO-IA

./: .gitignore  AGENTS.md  ARCHITECTURE.md  README.md  pyproject.toml
.github/: copilot-instructions.md
.github/workflows/: main_validation.yml
