[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "math_kernel_von_neumann"
version = "0.1.0"
description = "Repositorio base para cálculo científico y gestión de agentes de IA"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    { name = "Neru" }
]
# Dependencias principales para el entorno de ejecución
dependencies = [
    "numpy>=1.26.0",
    "scipy>=1.12.0",
    "matplotlib>=3.8.0",
    "sympy>=1.12",
    "pandas>=2.2.0",
    "jsonschema>=4.21.0",
    "svglib>=1.5.0"
]

[project.optional-dependencies]
dev = [
    "ruff>=0.3.0",
    "pytest>=8.0.0"
]

[tool.setuptools]
packages = ["src"]

[tool.ruff]
# Configuración de linter moderno para mantener el código limpio
line-length = 88
select = ["E", "F", "B"]
